photo upload swagger
